log

Thu 14 Mar 2024 08:33:53 PM UTC: 
 exercises.c | 48 +++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 45 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:66:12: error: expected expression before ‘[’ token
   66 |   result = [size1 + size2];
      |            ^
Compilation failed
f878255
Thu 14 Mar 2024 08:34:17 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:12: error: expected expression before ‘[’ token
   65 |   result = [size1 + size2];
      |            ^
Compilation failed
2487210
